# tonic-core

./: .gitignore  Cargo.toml  Justfile  LICENSE  Makefile  README.md
res/: tonic-dex.wasm
scripts/: create-ft-market  deposit  init-dex  init-tokens  mint  prelude  register-accounts-on-dex  register-self-with-tokens  token-storage-deposit
test-token/: Cargo.toml
test-token/src/: lib.rs
tonic-dex/: Cargo.toml
tonic-dex/proptest-regressions/: order_id.txt
tonic-dex/src/: actions.rs  admin.rs  balances.rs  fees.rs  lib.rs  limit_order.rs  market_order.rs  settlement.rs  storage.rs  storage_manager.rs  swap_order.rs  upgrade.rs  views.rs
tonic-dex/src/account/: mod.rs  v1.rs
tonic-dex/src/external_tokens/: external_tokens.rs  mod.rs  token_receiver.rs
tonic-dex/src/market/: mod.rs  v1.rs
tonic-dex/tests/: fees.rs  storage.rs  stress.rs  trading.rs  util.rs  views.rs
tonic-dex/tests/workspaces/: main.rs  test_dex.rs  utils.rs
