[package]
name = "tonic-dex"
version = "0.1.0"
authors = ["Tonic Foundation <hello@tonic.foundation>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
# rlib is required for tests. Unset during production builds.

[dependencies]
near-sdk = "4.0.0-pre.8"
near-contract-standards = "4.0.0-pre.8"
serde_json = "1.0"
num_enum = "0.5.6"
sha3 = "^0.10.0"

tonic-sdk = { git = "https://github.com/tonic-foundation/tonic-sdk-rs.git", rev = "f2901bd7a53e35a1e5f4317f98de22af174c8177" }

[dev-dependencies]
near-sdk-sim = "4.0.0-pre.8"
test-token = { path = "../test-token" }
proptest = "1.0.0"
proptest-derive = "0.3.0"
tokio = { version = "1.14", features = ["full"] }
workspaces = "0.1.1"
anyhow = "1.0"
near-primitives = "0.5.0"
base64 = "0.13.0"

[profile.release]
overflow-checks = true

[features]
debug_log = []
no_emit = []
no_order_limit = []
measure_gas = []
expensive_debug = []
